--- a/CantinaDoTioBill.csproj
+++ b/CantinaDoTioBill.csproj
@@ -56,42 +56,54 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cadastro de Produtos.cs">
+    <Compile Include="View\Cadastro de Produtos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Cadastro de Produtos.Designer.cs">
+    <Compile Include="View\Cadastro de Produtos.Designer.cs">
       <DependentUpon>Cadastro de Produtos.cs</DependentUpon>
     </Compile>
-    <Compile Include="Cadastro de Usuários.cs">
+    <Compile Include="View\Cadastro de Usuários.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Cadastro de Usuários.Designer.cs">
+    <Compile Include="View\Cadastro de Usuários.Designer.cs">
       <DependentUpon>Cadastro de Usuários.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="View\Clientes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="View\Clientes.Designer.cs">
+      <DependentUpon>Clientes.cs</DependentUpon>
     </Compile>
-    <Compile Include="Home.cs">
+    <Compile Include="View\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Home.Designer.cs">
+    <Compile Include="View\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Home.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Home.Designer.cs">
       <DependentUpon>Home.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tela de Cadastro.cs">
+    <Compile Include="View\Produtos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Tela de Cadastro.Designer.cs">
-      <DependentUpon>Tela de Cadastro.cs</DependentUpon>
+    <Compile Include="View\Produtos.Designer.cs">
+      <DependentUpon>Produtos.cs</DependentUpon>
     </Compile>
-    <Compile Include="Tipo de Quentinha.cs">
+    <Compile Include="View\Cadastro de Clientes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Tipo de Quentinha.Designer.cs">
+    <Compile Include="View\Cadastro de Clientes.Designer.cs">
+      <DependentUpon>Cadastro de Clientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Tipo de Quentinha.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Tipo de Quentinha.Designer.cs">
       <DependentUpon>Tipo de Quentinha.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControl1.cs">
@@ -100,22 +112,37 @@
     <Compile Include="UserControl1.Designer.cs">
       <DependentUpon>UserControl1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Venda Balcão.cs">
+    <Compile Include="View\Usuários.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Venda Balcão.Designer.cs">
+    <Compile Include="View\Usuários.Designer.cs">
+      <DependentUpon>Usuários.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Venda Balcão.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Venda Balcão.Designer.cs">
       <DependentUpon>Venda Balcão.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Cadastro de Produtos.resx">
+    <Compile Include="View\Vendas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Vendas.Designer.cs">
+      <DependentUpon>Vendas.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="View\Cadastro de Produtos.resx">
       <DependentUpon>Cadastro de Produtos.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Cadastro de Usuários.resx">
+    <EmbeddedResource Include="View\Cadastro de Usuários.resx">
       <DependentUpon>Cadastro de Usuários.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="View\Clientes.resx">
+      <DependentUpon>Clientes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Home.resx">
+    <EmbeddedResource Include="View\Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -128,14 +155,23 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Tela de Cadastro.resx">
-      <DependentUpon>Tela de Cadastro.cs</DependentUpon>
+    <EmbeddedResource Include="View\Produtos.resx">
+      <DependentUpon>Produtos.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Tipo de Quentinha.resx">
+    <EmbeddedResource Include="View\Cadastro de Clientes.resx">
+      <DependentUpon>Cadastro de Clientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Tipo de Quentinha.resx">
       <DependentUpon>Tipo de Quentinha.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Venda Balcão.resx">
+    <EmbeddedResource Include="View\Usuários.resx">
+      <DependentUpon>Usuários.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Venda Balcão.resx">
       <DependentUpon>Venda Balcão.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Vendas.resx">
+      <DependentUpon>Vendas.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -151,7 +187,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\novo6078200.png" />
   </ItemGroup>
